--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/cash_accounts"
+        android:icon="@drawable/ic_bills"
+        android:title="Счета"
+        app:showAsAction="ifRoom|ifRoom" />
+    <item
         android:id="@+id/settings"
         android:title="@string/settings" />
     <item
