--- a/app/src/main/res/values/categories.xml
+++ b/app/src/main/res/values/categories.xml
@@ -1,2 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+
+    <string-array name="category">
+        <item>Продукты</item>
+        <item>Одежда</item>
+        <item>Коммунальные платежи</item>
+    </string-array>
+
+
+
+</resources>
