bug fix crash app. Change structure folders and clean code

--- a/app/src/main/res/values/categories.xml
+++ b/app/src/main/res/values/categories.xml
@@ -2,11 +2,9 @@
 <resources>
 
     <string-array name="category">
-        <item>Продукты</item>
-        <item>Одежда</item>
-        <item>Коммунальные платежи</item>
+        <item>Products</item>
+        <item>Clothes</item>
+        <item>Utilites</item>
     </string-array>
-
-
 
 </resources>
