--- a/app/src/main/res/layout/fragment_current_balance.xml
+++ b/app/src/main/res/layout/fragment_current_balance.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/scrollContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,13 +21,13 @@
                 android:id="@+id/cardView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="64dp"
                 android:layout_marginBottom="8dp"
                 android:visibility="visible"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="5dp"
                 app:layout_constraintBottom_toTopOf="@+id/chart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +44,7 @@
                         android:layout_marginTop="8dp"
                         android:gravity="center_vertical|center_horizontal"
                         android:text="@string/current_balance"
-                        android:textSize="26dp"
+                        android:textSize="26sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -52,9 +53,9 @@
                         android:id="@+id/nameAnyCurrency"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
+                        android:layout_marginStart="16dp"
                         android:text="USD"
-                        android:textSize="24dp"
+                        android:textSize="24sp"
                         app:layout_constraintBaseline_toBaselineOf="@+id/currentBalanceAnyCurrency"
                         app:layout_constraintStart_toStartOf="parent" />
 
@@ -62,9 +63,9 @@
                         android:id="@+id/nameBaseCurrensy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
+                        android:layout_marginStart="16dp"
                         android:text="RUB"
-                        android:textSize="24dp"
+                        android:textSize="24sp"
                         app:layout_constraintBaseline_toBaselineOf="@+id/currentBalanceBaseCurrency"
                         app:layout_constraintStart_toStartOf="parent" />
 
@@ -79,7 +80,7 @@
                         android:gravity="center_vertical|center_horizontal"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/nameAnyCurrency"
@@ -95,7 +96,7 @@
                         android:gravity="center_vertical|center_horizontal"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/nameBaseCurrensy"
                         app:layout_constraintTop_toBottomOf="@+id/captionCurrentBalance" />
@@ -118,11 +119,11 @@
 
             <TableLayout
                 android:id="@+id/table"
-                android:stretchColumns="*"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:stretchColumns="*"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -130,35 +131,35 @@
                 app:layout_constraintTop_toBottomOf="@+id/chart">
 
                 <TableRow
-                    android:padding="5dp"
-                    android:background="#cccccc"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="#cccccc"
+                    android:padding="5dp">
 
-                    <TextView android:layout_width="fill_parent"
+                    <TextView
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="Категория"
-                        android:gravity="center_horizontal"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        />
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                    <TextView android:layout_width="fill_parent"
+                    <TextView
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="Сумма"
-                        android:gravity="center_horizontal"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        />
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                    <TextView android:layout_width="fill_parent"
+                    <TextView
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:text="%"
                         android:gravity="center_horizontal"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        />
+                        android:text="%"
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 </TableRow>
 
-               
+
             </TableLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
