--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,14 +1,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="@string/pref_default_display_name"
-        android:inputType="textCapWords"
-        android:key="example_text"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="@string/pref_title_display_name" />
-
+    <ListPreference
+        android:key="lang"
+        android:title="@string/LangTitle"
+        android:summary="@string/LangSummary"
+        android:entries="@array/entries_lang"
+        android:entryValues="@array/entryvalues_lang"
+        android:dialogTitle="@string/LangDialogTitle" />
 
 </PreferenceScreen>
