Added navigation components. Bottom app bar. Single activity.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,8 +5,8 @@
     <item
         android:id="@+id/cash_accounts"
         android:icon="@drawable/ic_bills"
-        android:title="Счета"
-        app:showAsAction="ifRoom|ifRoom" />
+        android:title="@string/accounts"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/settings"
         android:title="@string/settings" />
