--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -17,5 +17,12 @@
     <fragment
         android:id="@+id/transactionAddFragment"
         android:name="com.mobilschool.fintrack.ui.transaction.add.TransactionAddFragment"
-        android:label="TransactionAddFragment" />
+        android:label="TransactionAddFragment" >
+        <argument
+            android:name="walletId"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_transactionAddFragment_to_homeFragment"
+            app:popUpTo="@+id/homeFragment" />
+    </fragment>
 </navigation>
