--- a/app/src/main/res/layout/fragment_current_balance.xml
+++ b/app/src/main/res/layout/fragment_current_balance.xml
@@ -170,7 +170,7 @@
          android:layout_gravity="bottom" />-->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
