--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/caption_current_balance"
+                        android:id="@+id/caption_balance"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -42,10 +42,25 @@
                         android:gravity="center_vertical|center_horizontal"
                         android:text="@string/current_balance"
                         android:textColor="@android:color/white"
-                        android:textSize="26sp"
+                        android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_current_wallet"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/caption_balance"
+                        tools:text="TEST ACCOUNT"/>
 
                     <View
                         android:id="@+id/balance_hint_divider"
@@ -57,14 +72,14 @@
                         android:background="@android:color/white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/caption_current_balance" />
+                        app:layout_constraintTop_toBottomOf="@id/tv_current_wallet" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_balances"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toBottomOf="@+id/caption_current_balance" />
+                        app:layout_constraintTop_toBottomOf="@+id/balance_hint_divider" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
@@ -91,7 +106,7 @@
     </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_add"
         android:src="@android:drawable/ic_input_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
