--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -8,6 +8,7 @@
         app:actionViewClass="androidx.appcompat.widget.AppCompatSpinner"
         android:title="@string/accounts" />
     <item
+        android:visible="false"
         android:id="@+id/settings"
         android:title="@string/settings" />
     <item
