--- a/app/src/main/res/layout/item_balance_with_currency.xml
+++ b/app/src/main/res/layout/item_balance_with_currency.xml
@@ -13,22 +13,22 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:textSize="24sp"
-        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimaryText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="RUB" />
 
     <TextView
-        android:id="@+id/tv_balance"
+        android:id="@+id/tv_in_other_currencies"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:textAlignment="viewEnd"
-        android:textSize="24sp"
-        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimaryText"
         app:layout_constraintBaseline_toBaselineOf="@id/tv_currency"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_currency"
