--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -9,20 +9,6 @@
         android:id="@+id/homeFragment"
         android:name="com.mobilschool.fintrack.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_transactionAddFragment"
-            app:destination="@id/transactionAddFragment" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
-    </fragment>
-    <fragment
-        android:id="@+id/transactionAddFragment"
-        android:name="com.mobilschool.fintrack.ui.transaction.add.TransactionAddFragment"
-        android:label="TransactionAddFragment" >
-        <argument
-            android:name="walletId"
-            app:argType="integer" />
-        <action
-            android:id="@+id/action_transactionAddFragment_to_homeFragment"
-            app:popUpTo="@+id/homeFragment" />
+        tools:layout="@layout/fragment_home_old" >
     </fragment>
 </navigation>
