Design changes, landscape orientation, some tests

--- a/app/src/main/res/layout/fragment_templates_periodic.xml
+++ b/app/src/main/res/layout/fragment_templates_periodic.xml
@@ -24,6 +24,15 @@
         </com.google.android.material.tabs.TabLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add_template"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:srcCompat="@drawable/ic_add_white_24dp"/>
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_templates_periodics"
         android:layout_width="match_parent"
