--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,88 +63,127 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.MainActivity">
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar_top"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:elevation="0dp">
+        android:layout_height="match_parent"
+        tools:context=".ui.main.MainActivity">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar_top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:elevation="0dp">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed" >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_balance_in_fav_currencies"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#F5F5F5"
+                        tools:listitem="@layout/item_balance_with_currency"
+                        tools:layout_height="64dp"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_templates"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        tools:listitem="@layout/item_template_in_home"
+                        tools:layout_height="100dp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="#22999999" />
+                </LinearLayout>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_transactions"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed" >
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/item_transaction"/>
+
+        <ScrollView
+            android:id="@+id/content_no_data"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:fillViewport="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_balance_in_fav_currencies"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+                <TextView
+                    android:layout_marginTop="8dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_balance_with_currency"
-                    tools:layout_height="84dp"/>
-                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_gravity="center_horizontal"
+                    android:textAlignment="center"
+                    android:text="@string/no_data"/>
+                <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    tools:listitem="@layout/item_template_in_home"/>
+                    android:layout_height="256dp"
+                    android:layout_gravity="center_horizontal"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/placeholder_no_data"/>
             </LinearLayout>
+        </ScrollView>
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        <!--<androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_transactions"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
-    </com.google.android.material.appbar.AppBarLayout>
+        </androidx.recyclerview.widget.RecyclerView>-->
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_transactions"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:listitem="@layout/item_transaction"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_new_transaction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_new_transaction"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            app:layout_anchor="@id/app_bar_bottom"
+            app:layout_anchorGravity="center_horizontal"
+            app:cornerRadius="24dp"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+            app:icon="@drawable/ic_add_white_24dp"/>
 
-    <!--<androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_transactions"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+        <!-- Fake shadow on top of bottom app bar because of android shadowing system -->
+        <View
+            app:layout_anchor="@id/app_bar_bottom"
+            app:layout_anchorGravity="center_horizontal"
+            android:layout_gravity="top|center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:background="@drawable/horizontal_shadow_gradient"/>
 
-    </androidx.recyclerview.widget.RecyclerView>-->
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/app_bar_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:hideOnScroll="true"
+            app:navigationIcon="@drawable/ic_menu_black_24dp"/>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_new_transaction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_new_transaction"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        app:layout_anchor="@id/app_bar_bottom"
-        app:layout_anchorGravity="center_horizontal"
-        app:cornerRadius="24dp"
-        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-        app:icon="@drawable/ic_add_white_24dp"/>
-
-    <!-- Fake shadow on top of bottom app bar because of android shadowing system -->
-    <View
-        app:layout_anchor="@id/app_bar_bottom"
-        app:layout_anchorGravity="center_horizontal"
-        android:layout_gravity="top|center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="@drawable/horizontal_shadow_gradient"/>
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/app_bar_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:hideOnScroll="true"
-        app:navigationIcon="@drawable/ic_menu_black_24dp"/>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </LinearLayout>
