--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/settings"
-        android:icon="@drawable/ic_settings_black_24dp"
-        android:title="@string/nav_template_and_periodic_transactions" />
-    <item
-        android:id="@+id/about"
-        android:icon="@drawable/ic_info_outline_black_24dp"
-        android:title="@string/about" />
+    <group android:checkableBehavior="none">
+        <item
+            android:id="@+id/nav_templates_periodics"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="@string/nav_template_and_periodic_transactions" />
+        <item
+            android:id="@+id/about"
+            android:icon="@drawable/ic_info_outline_black_24dp"
+            android:title="@string/about" />
+    </group>
 </menu>
