--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -9,6 +9,15 @@
         android:id="@+id/homeFragment"
         android:name="com.mobilschool.fintrack.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home_old" >
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_templatesPeriodicsFragment"
+            app:destination="@id/templatesPeriodicsFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/templatesPeriodicsFragment"
+        android:name="com.mobilschool.fintrack.ui.template.TemplatesPeriodicsFragment"
+        android:label="TemplatesPeriodicsFragment" />
+
+
 </navigation>
