--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -96,6 +96,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent" />
         <LinearLayout
+            android:orientation="vertical"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent">
