--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -123,7 +123,7 @@
             android:id="@+id/content_no_data"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
+            android:visibility="visible"
             android:fillViewport="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <LinearLayout
@@ -131,19 +131,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal">
-                <TextView
-                    android:layout_marginTop="8dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textAlignment="center"
-                    android:text="@string/no_data"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="256dp"
                     android:layout_gravity="center_horizontal"
                     android:adjustViewBounds="true"
                     app:srcCompat="@drawable/placeholder_no_data"/>
+                <TextView
+                    android:text="@string/add_your_transaction_here"
+                    android:textSize="18sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </ScrollView>
 
